M AppTakeoff Developers portal

--- a/blog/2021-07-28-Xin chào.md
+++ b/blog/2021-07-28-Xin chào.md
@@ -4,8 +4,8 @@ title: Welcome to the new App Takeoff 👋
 author: Khoi Tran
 author_title: CTO, App Takeoff
 author_url: https://nguyenkhooi.github.io
-author_image_url: https://avatars1.githubusercontent.com/u/2055384?v=4
-tags: [hola, docusaurus]
+author_image_url: https://i.ibb.co/qBdgD31/khoi-shades.jpg
+tags: [hola, app-takeoff]
 ---
 
 👋 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum dignissim ultricies. Fusce rhoncus ipsum tempor eros aliquam consequat. Lorem ipsum dolor sit amet
